# rag-chunk-visualiser

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
scripts/: smoke_check.py
src/rag_chunk_visualizer/app/: layout.py  state.py
src/rag_chunk_visualizer/core/: config.py  logging.py
src/rag_chunk_visualizer/models/: chunk.py  document.py
src/rag_chunk_visualizer/services/: chunking_service.py  document_service.py  embedding_service.py  rag_service.py  retrieval_service.py
src/rag_chunk_visualizer/storage/: lancedb_store.py
src/rag_chunk_visualizer/visualization/: plotting.py  projection.py
tests/: test_chunking_service.py  test_config.py  test_document_service.py  test_embedding_service.py  test_lancedb_store.py  test_projection.py  test_rag_service.py  test_retrieval_service.py
